# door_plate_generator

./: LICENSE  README.md  pyproject.toml
door_plate_generator/: __main__.py  excel.py  main.py  models.py  powerpoint.py  profile.py
pptx_slide_generator/: __init__.py  __main__.py  excel.py  main.py  models.py  powerpoint.py  profile.py  svg.py
