[tool.poetry]
name = "pptx-slide-generator"
version = "0.1.0"
description = "Generically generate powerpoint slides with given master layout and shape content."
authors = ["Franz Wöllert <franz.woellert@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pptx_slide_generator"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
openpyxl = "^3.1.2"
pydantic = "^1.10.7"
python-pptx = "^0.6.21"
loguru = "^0.7.0"
click = "^8.1.6"
trogon = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run= "pptx_slide_generator.__main__:run"