[tool.poetry]
name = "door-plate-generator"
version = "0.1.0"
description = "Generate door plates from door plans, master layouts and master data."
authors = ["Franz Wöllert <franz.woellert@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "door_plate_generator"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
openpyxl = "^3.1.2"
pydantic = "^1.10.7"
python-pptx = "^0.6.21"
loguru = "^0.7.0"
click = "^8.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
door-plate-generator = "door_plate_generator.__main__:cli"